--- a/packages/assets/src/components/NotificationPopup/NoticationPopup.scss
+++ b/packages/assets/src/components/NotificationPopup/NoticationPopup.scss
@@ -83,6 +83,9 @@
   font-size: 10px;
   line-height: 16px;
   margin-top: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .Avava-SP__Wrapper .Avada-SP__Content .uni-blue {
   color: #2196f3;
