--- a/packages/assets/src/styles/layout/topbar.scss
+++ b/packages/assets/src/styles/layout/topbar.scss
@@ -2,6 +2,7 @@
 
 // subscription plan badge
 .Polaris-TopBar {
+  background-color: #fff !important;
   .Avada-Pricing__Badge {
     position: absolute;
     left: 6.5rem;
@@ -51,6 +52,7 @@
     a {
       font-weight: 600;
       color: $primaryDarkColor;
+      text-decoration: none;
     }
     > * {
       margin-right: 1.2rem;
@@ -59,18 +61,17 @@
 
   // top right icons
   .Avada-TopBar__Icons {
-    margin-top: 0.4rem;
+    margin-top: 0.6rem;
 
     .Polaris-Button--plain:active:not(.Polaris-Button--iconOnly) > .Polaris-Button__Content {
       background: transparent;
     }
 
-    .Polaris-Thumbnail {
+    .Polaris-Avatar {
+      width: 2.5rem;
+      height: 2.5rem;
       border: unset;
-
-      img {
-        width: 2rem;
-      }
+      border-radius: 100px;
     }
   }
 }
